* Thu Mar 08 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.4.5-0
- Add support for OracleLinux 6 and 7
- Test against Puppet 5

* Thu Aug 17 2017 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.4.4-0
- Update the README with the new badges and improve formatting

* Thu Jul 20 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 0.4.3-0
- Fix bad 0.4.2 tag.  In that tag, the metadata.json was incorrect.

* Thu Jul 20 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 0.4.2-0
- Fix bad tag.  simp-0.4.1 tag was made off of master branch.

* Thu Jul 06 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 0.4.1-0
- Update puppet dependency in metadata.json
- Remove OBE pe dependency in metadata.json

* Wed Dec 21 2016 Nick Markowski <nmarkowski@keywcorp.com> - 0.4.0-0
- Updated global catalysts

* Mon Nov 21 2016 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.3.3-0
- Updated to compliance_markup version 2

* Thu Sep 29 2016 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.3.2-0
- Fixed malformed pe dependency in metadata.json
- Fixed syntax to enable publishing to the Forge

* Thu Jul 07 2016 Nick Markowski <nmarkowski@keywcorp.com> - 0.3.1-0
- Updated module for auto lua spec generation
- Added missing requires file and added dependency on simplib
- Modified module to auto-generate lua spec

* Wed Jun 01 2016 Trevor Vaughan <tvaughan@onyxpoint.com>
- Massive Refactor
- Refactored the module to use the latest best practices and eliminate issues
  with doing an 'include' of the individual sub-classes.
- Worked around a bug with the yum provider and the 'purged' parameter
- Fixed some class ordering
- Added acceptance tests for EL6 and EL7
- Updated the rspec tests to properly work around OEL issues with facts