@@ -1,11 +1,16 @@
 # The testing matrix considers ruby/puppet versions supported by SIMP and PE:
+#
+# https://puppet.com/docs/pe/2018.1/component_versions_in_recent_pe_releases.html
+# https://puppet.com/misc/puppet-enterprise-lifecycle
+# https://puppet.com/docs/pe/2018.1/overview/getting_support_for_pe.html
 # ------------------------------------------------------------------------------
-#  release    pup   ruby      eol
-# PE 2016.4   4.7   2.1.9  TBD (LTS)
-# PE 2016.5   4.8   2.1.9  2017-10-31
-# SIMP6.0.0   4.8   2.1.9  TBD
-# PE 2017.1   4.9   2.1.9  2017-10-31
-# PE 2017.2   4.10  2.1.9  TBD
+# Release       Puppet   Ruby   EOL
+# SIMP 6.1      4.10     2.1.9  TBD
+# SIMP 6.2      4.10     2.1.9  TBD
+# SIMP 6.3      5.5      2.4.4  TBD***
+# PE 2018.1     5.5.6    2.4.4  2020-05 (LTS)***
+#
+# *** = Modules created for SIMP 6.3+ are not required to support Puppet < 5.5
 ---
 language: ruby
 cache: bundler
@@ -16,63 +21,50 @@ bundler_args: --without development system_tests --path .vendor
 notifications:
   email: false
 
+addons:
+  apt:
+    packages:
+      - rpm
+
 before_install:
   - rm -f Gemfile.lock
 
 jobs:
-  allow_failures:
-    - env: PUPPET_VERSION="~> 5.0"
-
   include:
-
-    - stage: validate
-      rvm: 2.4.1
-      env: PUPPET_VERSION="~> 5"
+    - stage: check
+      rvm: 2.4.4
+      env: STRICT_VARIABLES=yes TRUSTED_NODE_DATA=yes PUPPET_VERSION="~> 5"
       script:
         - bundle exec rake check:dot_underscore
         - bundle exec rake check:test_file
         - bundle exec rake pkg:check_version
-        - bundle exec rake syntax
-        - bundle exec rake lint
         - bundle exec rake metadata_lint
         - bundle exec rake pkg:compare_latest_tag
         - bundle exec rake pkg:create_tag_changelog
+        - bundle exec rake lint
         - bundle exec puppet module build
 
-    - stage: validate
-      rvm: 2.1.9
-      env: PUPPET_VERSION="~> 4.8"
-      script:
-        - bundle exec rake syntax
-        - bundle exec rake lint
-        - bundle exec rake metadata_lint
-
+# Test for latest version
     - stage: spec
-      rvm: 2.4.1
-      env: PUPPET_VERSION="~> 5.0"
+      rvm: 2.4.4
+      env: STRICT_VARIABLES=yes PUPPET_VERSION="~> 5.0"
       script:
         - bundle exec rake spec
-
+# Test for curent version
     - stage: spec
-      rvm: 2.1.9
-      env: PUPPET_VERSION="~> 4.10.0"
+      rvm: 2.4.4
+      env: STRICT_VARIABLES=yes PUPPET_VERSION="~> 5.5.7"
       script:
         - bundle exec rake spec
-
+# Test oldest supported version
     - stage: spec
       rvm: 2.1.9
-      env: PUPPET_VERSION="~> 4.9.2"
-      script:
-        - bundle exec rake spec
-
-    - stage: spec
-      rvm: 2.1.9
-      env: PUPPET_VERSION="~> 4.7.0"
+      env: STRICT_VARIABLES=yes TRUSTED_NODE_DATA=yes PUPPET_VERSION="~> 4.10.0"
       script:
         - bundle exec rake spec
 
     - stage: deploy
-      rvm: 2.4.1
+      rvm: 2.4.4
       script:
         - true
       before_deploy:
@@ -92,6 +84,6 @@ jobs:
             secure: "A4iyZF2QK9mnFOljwe9/M/Z3hcwaIb2m6xX63CZDo+KlYRpD82ozE8W5xroYSFfiiJEARMYLJBqPBQmtp+tORqlneBPHATCxjEuEy2iOapPnVw+Wh2mWXWgCsjpog9OKjL/SHS3wcO1uQPRV3pR7Bf8duHc79kWYkSHgr6twGgjzG9T6xOWqt4W+Y4BZupeGDTD7MuR7RY9yt2i91IJjpdTjV5NAniOBeGKGtmFVtGus2Hye4LfuNdWcBzJucc9naT8lVobxTyc0qArCT9dVWRBU8cXfinR3E47bgbZ/75cqFN8ou+VxptehAkXQ5lSRG6OpHmZl7cdGHSnY/pDQMoZWYwd0qlnRm8zCVcVCPyXeTJXc6NNyLoSI1/e6toAzMf2qBuCG0AFRgkRPwXBZxmBMhcwzoy73O0sC5WnEb7Bwe8NUDcj76GUG6pv4fMF+PtuFIcA6JOknDGg1QyVMNA+Er2b8Uyklrrf4KrDMKUbD4NDcR/xMfxkt6lNSEQ7ut4LRy34YQA5xm1vChQpM5OtycNZxX7WQCpKvSWKl3II41XMxMO82E3AP3Ud4sGekWqB1Ln7XTnJ468tyFgQPrCMqBApW5KHNW4zDdQUABMnvtrAEtP0ldL7vMDbps+PqXzlYyD9jaU8PsUspR4+L6NfcBgyrmeOaHb8GTUfAGTs="
           on:
             tags: true
-            rvm: 2.4.1
+            rvm: 2.4.4
             condition: '($SKIP_FORGE_PUBLISH != true)'
 
