@@ -1,33 +1,0 @@
-HOSTS:
-  oel7:
-    roles:
-      - server
-      - default
-      - master
-    platform:   el-7-x86_64
-    box:        elastic/oel-7-x86_64
-    hypervisor: vagrant
-    yum_repos:
-      epel:
-        url: 'http://download.fedoraproject.org/pub/epel/7/$basearch'
-        gpgkeys:
-          - https://getfedora.org/static/352C64E5.txt
-
-  oel6:
-    roles:
-      - client
-    platform:   el-6-x86_64
-    box:        elastic/oel-6-x86_64
-    hypervisor: vagrant
-    yum_repos:
-      epel:
-        url: 'http://download.fedoraproject.org/pub/epel/6/$basearch'
-        gpgkeys:
-          - https://getfedora.org/static/0608B895.txt
-
-CONFIG:
-  log_level: verbose
-  type:      aio
-  vagrant_memsize: 256
-  puppet_collection: puppet5
-  # vb_gui: true
